# langchainai-dependency-update-agent-demo

./: .gitignore  README.md  main.py  pyproject.toml
agents/: README.md  pyproject.toml
agents/langchain-deps/: README.md  pyproject.toml
agents/langchain-deps/langchain_deps_agent/: __init__.py  agent.py  cli.py  config.py
agents/langchain-deps/langchain_deps_agent/tools/: github_repo_tool.py  langchain_tools.py
agents/langchain_deps_agent/: __init__.py  agent.py  cli.py  config.py
agents/langchain_deps_agent/tools/: github_repo_tool.py  langchain_tools.py
agents/langchain_lint_agent/: __init__.py  agent.py  cli.py  config.py
agents/langchain_lint_agent/tools/: linting_tools.py
fe/: package-lock.json  package.json
fe/src/app/: layout.tsx  page.tsx
fe/src/app/api/run-agent/: route.ts
infra/: README.md  pyproject.toml
infra/runloop-blueprint/: README.md  build_blueprint.py  pyproject.toml  run_agent_on_repo.py
infra/scripts/: __init__.py  build_blueprint.py  run_agent_on_repo.py
monorepo_cli/: __init__.py  blueprint_build.py  constants.py  devbox_runner.py  memory.py
