[project]
name = "langchain-deps-agent"
version = "0.1.0"
description = "LangChain toolchain that updates project dependencies inside a Runloop devbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.22",
    "typer>=0.12.3",
    "pydantic>=2.7.0",
    "rich>=13.7",
    "httpx>=0.27.0",
    "packaging>=24.1",
]

[project.scripts]
langchain-deps-agent = "langchain_deps_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_deps_agent"]
