[project]
name = "langchain-deps-agent"
version = "0.1.0"
description = "LangChain toolchain that updates project dependencies inside a Runloop devbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "typer>=0.20.0",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "httpx>=0.28.1",
    "packaging>=25.0",
]

[project.scripts]
langchain-deps-agent = "langchain_deps_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_deps_agent"]
